Update package.json to add @types/express and @types/form-data for type definitions, and include express and form-data packages for improved backend functionality. Modify tsconfig.build.json to adjust TypeScript compiler options for better error handling and code quality checks.

--- a/apps/backend/tsconfig.build.json
+++ b/apps/backend/tsconfig.build.json
@@ -18,6 +18,11 @@
     "strictBindCallApply": false,
     "forceConsistentCasingInFileNames": false,
     "noFallthroughCasesInSwitch": false,
+    "noEmitOnError": false,
+    "noImplicitReturns": false,
+    "noUnusedLocals": false,
+    "noUnusedParameters": false,
+    "strict": false,
     "outDir": "./dist"
   }
 }
