--- a/package.json
+++ b/package.json
@@ -99,6 +99,8 @@
     "@tiptap/suggestion": "^3.0.7",
     "@types/bcrypt": "^5.0.2",
     "@types/concat-stream": "^2.0.3",
+    "@types/express": "^4.17.21",
+    "@types/form-data": "^2.5.0",
     "@types/facebook-nodejs-business-sdk": "^20.0.2",
     "@types/jsonwebtoken": "^9.0.5",
     "@types/lodash": "^4.14.202",
@@ -147,6 +149,8 @@
     "dayjs": "^1.11.10",
     "dotenv": "^16.5.0",
     "dotenv-cli": "^8.0.0",
+    "express": "^4.19.2",
+    "form-data": "^4.0.0",
     "emoji-picker-react": "^4.12.0",
     "facebook-nodejs-business-sdk": "^21.0.5",
     "fast-xml-parser": "^4.5.1",
